add some additional important tags with some responsive

--- a/basketball/basketball.html
+++ b/basketball/basketball.html
@@ -6,13 +6,21 @@
   <link rel="stylesheet" href="../style/style.css">
   <title>Basketball Players</title>
   <link rel="icon" type="image/x-icon" href="../static/images/barca-icon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 </head>
 <body>
-  <h1 class="mensText">
-    Basketball Players
-  </h1>
-  <div class="mensPlayersContainer">
+  <header class="header">
+    <nav class="navBar">
+      <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Basketball Players
+      </h1>
+    </nav>
+  </header>
+  <div id="mensPlayersContainer" class="mensPlayersContainer">
     <div class="mensPlyersCard">
       <img src="../static/images/FW0IwIdWQAAkq4W.jpg" alt="" class="mensCardImg">
       <div class="cardBody">
@@ -44,8 +52,5 @@
       </div>
     </div>
   </div>
-
-
-
 </body>
 </html>
