--- a/basketball/players/Laprovittola.html
+++ b/basketball/players/Laprovittola.html
@@ -10,12 +10,19 @@
 
 </head>
 <body>
-  <header>
-    <h1 class="messiName">Nicolás Laprovíttola</h1>
+
+  <header class="header">
+    <nav class="navBar">
+      <a href="../basketball.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Nicolás Laprovíttola
+      </h1>
+    </nav>
   </header>
 
 
-  <div class="mainPageDiv">
+  <div id="mainPageDiv" class="mainPageDiv">
     <p class="messiParagraph">
       Nicolás "Nico" Laprovíttola (born January 31, 1990) is an Argentine professional basketball player for 
       FC Barcelona Bàsquet of the Spanish Liga ACB, and the EuroLeague. He is also a
