--- a/basketball/players/Satoransky.html
+++ b/basketball/players/Satoransky.html
@@ -10,12 +10,16 @@
 
 </head>
 <body>
-  <header>
-    <h1 class="messiName">Tomáš Satoranský</h1>
 
+  <header class="header">
+    <nav class="navBar">
+      <a href="../basketball.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Tomáš Satoranský
+      </h1>
+    </nav>
   </header>
-
-
   <div class="mainPageDiv">
     <p class="messiParagraph">
       Tomáš Satoranský (born 30 October 1991) is a Czech professional basketball player for FC Barcelona of the Spanish Liga ACB and the EuroLeague. Standing at 6 ft 7 in (2.01 m), he primarily plays at the point guard position, but he can also play as a shooting guard or small forward due to his height and wingspan.
@@ -76,7 +80,6 @@ On 4 July 2022, Satoranský penned a four-year deal with his former club FC Barc
       <li class="socialMediaLinks"><a  href="https://www.instagram.com/tomasatoransky" target="_blank"><i class="fab fa-instagram"></i></a></li>
       <li class="socialMediaLinks"><a  href="https://x.com/satoransky" target="_blank"><i class="fab fa-twitter"></i></a></li> 
     </div>
-
   </footer>
 </body>
 </html>
