--- a/mens/players/coutinho.html
+++ b/mens/players/coutinho.html
@@ -10,19 +10,25 @@
 
 </head>
 <body>
-  <header>
-    <h1 class="messiName">Philippe Coutinho</h1>
-
+  <header class="header">
+    <nav class="navBar">
+      <a href="../mens.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Philippe Coutinho
+      </h1>
+    </nav>
   </header>
+
 
 
   <div class="mainPageDiv">
     <p class="messiParagraph">
-      Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Qatar Stars League club Al-Duhail, on loan from Premier League club Aston Villa. He is known for his combination of vision, passing, dribbling and ability to conjure curling long-range shots.[4]
+      <b> Philippe Coutinho Correia </b>(born 12 June 1992) is a <u>Brazilian</u>  professional footballer who plays as an attacking midfielder or winger for Qatar Stars League club <b>Al-Duhail</b>, on loan from Premier League club Aston Villa. He is known for his combination of vision, passing, dribbling and ability to conjure curling long-range shots.[4]
 
 Coutinho showed prodigious talent and excelled in Vasco da Gama's youth system. He was signed by Serie A club Inter Milan in 2008 for €4 million and subsequently loaned back to Vasco, where he became a key player. He made his debut for Inter Milan in 2010, and was later loaned to La Liga club Espanyol in 2012. In January 2013, Coutinho joined Premier League club Liverpool. He flourished at Liverpool, being named in the PFA Team of the Year in 2015. At Liverpool, he formed a formidable attacking quartet with Mohamed Salah, Roberto Firmino and Sadio Mané. In January 2018, Coutinho signed for Barcelona and won two La Liga titles with the club. He was loaned to German club Bayern Munich for the 2019–20 season, being part of the team that won a treble including the Bundesliga, DFB-Pokal and UEFA Champions League. He went on loan to Aston Villa in January 2022 before signing permanently for them in the summer.
 
-Coutinho made his senior international debut for Brazil in 2010. He was part of the squad at the 2015 Copa América and the Copa América Centenario in 2016, and made his FIFA World Cup debut at the 2018 World Cup, in which he scored two goals. He was also a member of the Brazil team that won the 2019 Copa América on home soil.The third and youngest son of Esmeralda Coutinho and architect José Carlos Correia, Coutinho was born on 12 June 1992 in Rio de Janeiro.[5] He was raised in Rio's northern Rocha district between an old shanty town and industrial warehouses.[6][7]
+Coutinho made his senior international debut for Brazil in 2010. <q cite="https://en.wikipedia.org/wiki/Philippe_Coutinho"> He was part of the squad at the 2015 Copa América and the Copa América Centenario in 2016</q>, and made his FIFA World Cup debut at the 2018 World Cup, in which he scored two goals. He was also a member of the Brazil team that won the 2019 Copa América on home soil.The third and youngest son of Esmeralda Coutinho and architect José Carlos Correia, Coutinho was born on 12 June 1992 in Rio de Janeiro.[5] He was raised in Rio's northern Rocha district between an old shanty town and industrial warehouses.[6][7]
 
 As a child he was very shy and would prefer to be alone; he started playing football after watching his elder brothers Cristiano and Leandro play with their friends at a local concrete football pitch. He began playing futsal, and he said it helped him develop his skills as a footballer.[7] Coutinho thrived in the street environment, developing skill and improvisation. After Coutinho joined a local football academy on the insistence of his friend's grandmother, his father was approached at a tournament by youth coaches at Vasco da Gama, where Coutinho attended a trial and joined their youth system.
     </p>
