--- a/basketball/players/Jokubaitis.html
+++ b/basketball/players/Jokubaitis.html
@@ -7,15 +7,18 @@
   <title>Jokubaitis</title>
   <link rel="icon" type="image/x-icon" href="../../static/images/barca-icon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
-  <header>
-    <h1 class="messiName">Rokas Jokubaitis</h1>
 
+  <header class="header">
+    <nav class="navBar">
+      <a href="../basketball.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Rokas Jokubaitis
+      </h1>
+    </nav>
   </header>
-
-
   <div class="mainPageDiv">
     <p class="messiParagraph">
       Rokas Jokubaitis (born 19 November 2000) is a Lithuanian professional basketball player for FC Barcelona of the Spanish Liga ACB and the EuroLeague.Early life and youth careerJokubaitis was born in Mažeikiai, Lithuania. He grew up playing youth basketball at the Vladas Knašius Basketball School in Klaipėda before moving to the youth academy of Žalgiris.[1] Jokubaitis was named to the all-tournament team at the 2018 Kaunas Tournament after averaging 15 points and 8.3 assists per game and leading Žalgiris to a third-place finish.[2]Professional careerŽalgiris (2017–2021)On 9 January 2018, Jokubaitis scored a game-high 31 points for Žalgiris-2 in a highly publicized exhibition game against LaMelo Ball and Prienai.[3] On 5 May, he made his senior debut for Žalgiris in its Lithuanian Basketball League (LKL) regular season finale against Pieno žvaigždės.[4] In the 2018–19 season, Jokubaitis was named the Best Young Player in the second-tier National Basketball League after averaging 13.2 points, 5.2 assists and 3.4 rebounds per game for Žalgiris-2.[5]On 14 June 2019, Jokubaitis signed a three-year contract extension with Žalgiris.[5] In the 2020–21 season, he averaged seven points and 2.5 assists per game in the EuroLeague. Jokubaitis was the runner-up to Usman Garuba for the EuroLeague Rising Star award.[6] He averaged eight points and four assists per game in the LKL and was named Best Young Player of the league.[7]Barcelona (2021–present)On 21 July 2021, Jokubaitis signed a four-year contract with FC Barcelona of the Spanish Liga ACB and the EuroLeague.[8]
@@ -42,18 +45,15 @@
         <h5>2017–2021<a href="https://en.wikipedia.org/wiki/BC_Žalgiris">Žalgiris Kaunas</a></h5>
         <h5>2017–2019<a href="https://en.wikipedia.org/wiki/CR_Vasco_da_Gama">Žalgiris-2 Kaunas</a></h5>
         <h5>2021–present<a href="https://en.wikipedia.org/wiki/FC_Barcelona_Bàsquet">FC Barcelona</a></h5>
-
       </div>
     </div>
   </div>
-
   <footer>
     <div class="socialMediaIcons">
       <li class="socialMediaLinks"><a  href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
       <li class="socialMediaLinks"><a  href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
       <li class="socialMediaLinks"><a  href="" target="_blank"><i class="fab fa-twitter"></i></a></li> 
     </div>
-
   </footer>
 </body>
 </html>
