--- a/mens/players/suariz.html
+++ b/mens/players/suariz.html
@@ -10,21 +10,25 @@
 
 </head>
 <body>
-  <header>
-    <h1 class="messiName">Luis_Suárez</h1>
 
+  <header class="header">
+    <nav class="navBar">
+      <a href="../mens.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
+      <p>Back</p>
+      <h1 class="mensText">
+        Luis_Suárez
+      </h1>
+    </nav>
   </header>
-
-
   <div class="mainPageDiv">
     <p class="messiParagraph">
-      Luis Alberto Suárez Díaz (Spanish pronunciation: [ˈlwis ˈswaɾes]; born 24 January 1987) is a Uruguayan professional footballer who plays as a striker for Major League Soccer club Inter Miami and the Uruguay national team. Nicknamed "El Pistolero" ("The Gunman"), he is regarded as one of the best players of his generation and one of the greatest strikers of all time.[2] Individually, he has won two European Golden Shoes, an Eredivisie Golden Boot, a Premier League Golden Boot and a Pichichi Trophy. He has scored over 500 career goals for club and country.[3]
+       <b>Luis Alberto Suárez Díaz</b> (Spanish pronunciation: [ˈlwis ˈswaɾes]; <b> born 24 January 1987</b>) is a Uruguayan professional footballer who plays as a striker for Major League Soccer club Inter Miami and the Uruguay national team. Nicknamed "El Pistolero" ("The Gunman"), he is regarded as one of the best players of his generation and one of the greatest strikers of all time.[2] Individually, he has won two European Golden Shoes, an Eredivisie Golden Boot, a Premier League Golden Boot and a Pichichi Trophy. He has scored over 500 career goals for club and country.[3]
 
-Suárez began his senior club career at Nacional in 2005. At age 19, he signed for Groningen, before transferring to Ajax in 2007. There, he won the KNVB Cup and the Eredivisie. In 2011, Suárez signed for Premier League club Liverpool, and won the League Cup in his first full season. Having established a strike partnership with Daniel Sturridge, he equalled the goalscoring record for a 38-game Premier League season and won his first European Golden Shoe in 2014. That summer, Suárez moved to Barcelona in a transfer worth £64.98 million (€82.3 million adjusted for inflation), making him one of the most expensive players of all time.
+Suárez began his senior club career at Nacional in 2005. At <u> age 19</u>, he signed for Groningen, before transferring to Ajax in 2007. There, he won the KNVB Cup and the Eredivisie. In 2011, Suárez signed for Premier League club Liverpool, and won the League Cup in his first full season. Having established a strike partnership with Daniel Sturridge, he equalled the goalscoring record for a 38-game Premier League season and won his first European Golden Shoe in 2014. That summer, Suárez moved to Barcelona in a transfer worth £64.98 million (€82.3 million adjusted for inflation), making him one of the most expensive players of all time.
 
-Suárez was part of a dominant trio dubbed MSN alongside Lionel Messi and Neymar, winning the treble of La Liga, the Copa del Rey and the UEFA Champions League in his first season. In his second season, he won the Pichichi Trophy and his second European Golden Shoe, becoming the first player since 2009 to win both awards other than Messi or Cristiano Ronaldo.[4] He also led La Liga in assists, becoming the first player to do so in both goals and assists in league history.[5][6] With Barcelona, Suárez won ten additional trophies, including three La Liga titles and three Copas del Rey. He signed for Atlético Madrid in 2020, winning his fifth La Liga title in his debut season.[7]
+Suárez was part of a dominant trio dubbed MSN alongside Lionel M  essi and Neymar, winning the treble of La Liga, the Copa del Rey and the UEFA Champions League in his first season. In his second season, <q cite="https://en.wikipedia.org/wiki/Luis_Suárez"> he won the Pichichi Trophy and his second European Golden Shoe</q>, becoming the first player since 2009 to win both awards other than Messi or Cristiano Ronaldo.[4] He also led La Liga in assists, becoming the first player to do so in both goals and assists in league history.[5][6] With Barcelona, Suárez won ten additional trophies, including three La Liga titles and three Copas del Rey. He signed for Atlético Madrid in 2020, winning his fifth La Liga title in his debut season.[7]
 
-At international level, Suárez is Uruguay's all-time leading goalscorer, and formerly held the title of highest scorer in CONMEBOL FIFA World Cup qualifiers before being surpassed by teammate Lionel Messi.[8] He has represented his nation at four editions of the FIFA World Cup and four editions of the Copa América, as well as the 2012 Summer Olympics and the 2013 FIFA Confederations Cup. He was named in the 2010 World Cup All-Star Team and won the 2011 Copa América, where he was awarded Best Player. Outside of his football credentials, Suárez has been a source of controversy throughout his career,[9][10][11] including a goal-line handball against Ghana at the 2010 FIFA World Cup, biting opponents on three occasions,[12][13][14][15] accusations of diving,[16][17] and racial incidents.
+At international level, Suárez is Uruguay's all-time leading goalscorer, and formerly held the title of highest scorer in <b> CONMEBOL FIFA </b>World Cup qualifiers before being surpassed by teammate Lionel Messi.[8] He has represented his nation at four editions of the FIFA World Cup and <u>four</u>  editions of the Copa América, as well as the 2012 Summer Olympics and the 2013 FIFA Confederations Cup. He was named in the 2010 World Cup All-Star Team and won the 2011 Copa América, where he was awarded Best Player. Outside of his football credentials, Suárez has been a source of controversy throughout his career,[9][10][11] including a goal-line handball against Ghana at the 2010 FIFA World Cup, biting opponents on three occasions,[12][13][14][15] accusations of diving,[16][17] and racial incidents.
     </p>
     <div class="messiCard">
       <img class="messiImg" src="../../static/images/Luis_Suárez.jpg" alt="Suárez IMAGE">
