add responsive for whole pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navBarIndex">
       <figure id="fegureBarcelonaImg" class="fegureBarcelonaImg">
         <img class="barcelonaImg" src="./static/images/barcelona-logo.png" alt="barcelona-icon">
-        <figcaption class="barcelonaImgDescription">
+        <figcaption id="barcelonaImgDescription" class="barcelonaImgDescription">
           VISCA <span class="titleSpan">EL</span><br> BARCA
         </figcaption>
       </figure>
@@ -28,7 +28,7 @@
         <i class="fas fa-search"></i>  
     </nav>
   </header>
-  <div id="mainText" class="mainTextDiv">
+  <div id="mainTextDiv" class="mainTextDiv">
     <h1 id="mainText" class="mainText">
       All news about the team, ticket sales, member services,<br> supporters club services and information <br>about <span class="MainTextSpan">Barça</span>   and the Club.
     </h1>
