--- a/mens/mens.html
+++ b/mens/mens.html
@@ -11,42 +11,42 @@
 <body>
   <header class="header">
     <nav class="navBar">
-      <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i> </a>
-      <p>Back</p>
-      <h1 class="mensText">
-        Mens Football Players
-      </h1>
+      <a href="../index.html" class="back"><i class="fa-sharp fa-solid fa-arrow-left"></i> <p>Back</p></a>
+      <h1 class="mensText">Mens Football Players</h1>
     </nav>
   </header>
   <div id="mensPlayersContainer" class="mensPlayersContainer">
     <div class="mensPlyersCard">
-      <img src="../static/images/messi.jpg" alt="" class="mensCardImg">
+      <img src="../static/images/messi.jpg" alt="MESSI PHOTO" class="mensCardImg">
       <div class="cardBody">
         <h1 class="cardTitle">MESSI</h1>
         <div class="cardDesWithLink">
-          <p class="cardDescription">Lionel Andrés Messi, born at 1987-06-24 in	Rosario, Argentina....
+          <p class="cardDescription">Lionel Andrés Messi, born at 1987-06-24 in Rosario, Argentina....
             <a class="cardsLink" href="./players/messi.html">More Info</a>
+          </p>
         </div>
       </div>
     </div>
     <div class="mensPlyersCard">
-      <img src="../static/images/Luis-Suarez-1122955.jpg" alt="" class="mensCardImg">
+      <img src="../static/images/Luis-Suarez-1122955.jpg" alt="Suarez Photo" class="mensCardImg">
       <div class="cardBody">
         <h1 class="cardTitle">Suarez</h1>
-                <div class="cardDesWithLink">
-                  <p class="cardDescription">Luis Alberto Suárez Díaz, born at 24 January 1987
-                    in	Salto, Uruguay....
-                    <a class="cardsLink" href="./players/suariz.html">More Info</a>
+        <div class="cardDesWithLink">
+          <p class="cardDescription">Luis Alberto Suárez Díaz, born at 24 January 1987 in Salto, Uruguay....
+            <a class="cardsLink" href="./players/suariz.html">More Info</a>
+          </p>
         </div>
       </div>
     </div>
     <div class="mensPlyersCard">
-      <img src="../static/images/cotinho.jpg" alt="" class="mensCardImg">
+      <img src="../static/images/cotinho.jpg" alt="Coutinho Photo" class="mensCardImg">
       <div class="cardBody">
         <h1 class="cardTitle">Coutinho</h1>
-        <p class="cardDescription">Philippe Coutinho Correia, born at 12 June 1992
-          in	Rio de Janeiro, Brazil....<a class="cardsLink" href="./players/coutinho.html">More Info</a>
-        </p>
+        <div class="cardDesWithLink">
+          <p class="cardDescription">Philippe Coutinho Correia, born at 12 June 1992 in Rio de Janeiro, Brazil....
+            <a class="cardsLink" href="./players/coutinho.html">More Info</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
