--- a/basketball/players/Satoransky.html
+++ b/basketball/players/Satoransky.html
@@ -20,7 +20,7 @@
       </h1>
     </nav>
   </header>
-  <div class="mainPageDiv">
+  <div id="mainPageDiv" class="mainPageDiv">
     <p class="messiParagraph">
       Tomáš Satoranský (born 30 October 1991) is a Czech professional basketball player for FC Barcelona of the Spanish Liga ACB and the EuroLeague. Standing at 6 ft 7 in (2.01 m), he primarily plays at the point guard position, but he can also play as a shooting guard or small forward due to his height and wingspan.
 
