--- a/mens/players/suariz.html
+++ b/mens/players/suariz.html
@@ -20,7 +20,7 @@
       </h1>
     </nav>
   </header>
-  <div class="mainPageDiv">
+  <div id="mainPageDiv" class="mainPageDiv">
     <p class="messiParagraph">
        <b>Luis Alberto Suárez Díaz</b> (Spanish pronunciation: [ˈlwis ˈswaɾes]; <b> born 24 January 1987</b>) is a Uruguayan professional footballer who plays as a striker for Major League Soccer club Inter Miami and the Uruguay national team. Nicknamed "El Pistolero" ("The Gunman"), he is regarded as one of the best players of his generation and one of the greatest strikers of all time.[2] Individually, he has won two European Golden Shoes, an Eredivisie Golden Boot, a Premier League Golden Boot and a Pichichi Trophy. He has scored over 500 career goals for club and country.[3]
 
